# quarc

./: .gitattributes  .gitignore  Makefile  README.md  environment.yml  pyproject.toml
analysis/: correctness.py  eval_utils.py
checkpoints/: download_trained_models.sh  ffn_pipeline.yaml  gnn_pipeline.yaml
checkpoints/agent/: ffn_agent_model.ckpt
checkpoints/agent_amount/: ffn_agent_amount_model.ckpt
checkpoints/reactant_amount/: gnn_reactant_amount_model.ckpt
checkpoints/temperature/: gnn_temperature_model.ckpt
configs/: preprocess_config.yaml  quarc_config.yaml
data/: README.md  example_input.json
data/trained_models/: gnn_pipeline.yaml
examples/: demo.ipynb
notebooks/: 01_inference_demo.ipynb
quarc/: args.py  config.py
quarc/data/: binning.py  datapoints.py  eval_datasets.py  ffn_datasets.py  gnn_dataloader.py  gnn_datasets.py
quarc/models/: callbacks.py  ffn_models.py  gnn_models.py  search.py
quarc/predictors/: base.py  model_factory.py  nn_predictor.py  popularity_predictor.py
quarc/preprocessing/: README.md  collect_deduplicate.py  condition_filter.py  create_chunks.py  documentation.md  exceptions.py  generate_agent_class.py  initial_filter.py  preprocess_quantities.py  split_by_document.py
quarc/utils/: quantity_utils.py  smiles_util.py
scripts/: ffn_train.py  gnn_train.py  inference.py  optimize_weights.py  preprocess.py  train.py
scripts/preprocessing/: README.md  make_preprocessing_yaml.py  preprocess_config.yaml
scripts/training/: ffn_train.py  gnn_train.py
src/quarc/: __init__.py  (+2 more)
trained_models/: ffn_pipeline.yaml
(+43 files in other folders)
