[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "quarc"
version = "0.0.1"
description = "Quantitative condition recommendation"
authors = [
  { name = "Xiaoqi Sun" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License"
]
requires-python = "~=3.11"

# ADD THIS SECTION - tells flit where to find the package
[tool.flit.module]
name = "quarc"
path = "src/quarc"

[tool.black]
line-length = 99
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
)/
'''

[tool.ruff.lint.isort]
known_first_party = ["quarc"]
force_sort_within_sections = true
